fix white space

--- a/src/views/user-profil/UserProfil.module.scss
+++ b/src/views/user-profil/UserProfil.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  top: 30rem;
+  top: 29rem;
   left: 20rem;
   width: 80vw;
   @media screen and (max-width: 1500px) {
